--- a/GP.html
+++ b/GP.html
@@ -36,7 +36,7 @@
         <input type="checkbox" id="menu-toggle" />
         <label for="menu-toggle" class="hamburger">&#9776;</label>
         <ul>
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Aboutus.html">About us</a></li>
             <li><a href="UG.html">Upcoming games</a></li>
             <li><a href="GP.html">Gaming peripherals</a></li>
