--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="subsection">
             <div class="image">
             <a href="GP.html">
-                <img src='/Images/Home/P.webp' alt="Gaming Peripherals">
+                <img src='Images/Home/P.webp' alt="Gaming Peripherals">
             </a>
             </div>
             <div class="text">
