Added 'add to cart' functionality and cart icon to navbar

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -44,6 +44,13 @@
             <li><a href="Gamepage.html">Game page</a></li>
             <li><a href="FAQ.html">Queries and FAQ</a></li>
         </ul>
+
+        <!-- Cart Icon -->
+        <div class="cart-icon">
+            <a href="cart.html">
+                <i class="fa fa-shopping-cart"></i> <!-- Font Awesome cart icon -->
+            </a>
+        </div>
     </nav>
     
     <p class="spacing"></p>  
