--- a/GP.html
+++ b/GP.html
@@ -44,6 +44,13 @@
             <li><a href="Gamepage.html">Game page</a></li>
             <li><a href="FAQ.html">Queries and FAQ</a></li>
         </ul>
+
+        <!-- Cart Icon -->
+        <div class="cart-icon">
+            <a href="cart.html">
+                <i class="fa fa-shopping-cart"></i> <!-- Font Awesome cart icon -->
+            </a>
+        </div>
     </nav>
 
     <p class="spacing"></p>
@@ -58,44 +65,60 @@
     
     <div class="image-grid">
         <div class="image-box">
-            <img src="Images/GP/1.jpg" alt="Image 1">
+            <img src="Images/GP/1.jpg" alt="Razer Cobra Wired Gaming Mouse">
             <p class="product-name">Razer Cobra Wired Gaming Mouse</p>
             <p class="price">LKR 12,500</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer Cobra Wired Gaming Mouse" data-price="12500">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/2.webp" alt="Image 2">
+            <img src="Images/GP/2.webp" alt="Razer Naga Left Handed Edition">
             <p class="product-name">Razer Naga Left Handed Edition</p>
             <p class="price">LKR 15,300</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer Naga Left Handed Edition" data-price="15300">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/3.webp" alt="Image 3">
+            <img src="Images/GP/3.webp" alt="RAZER KRAKEN V4">
             <p class="product-name">RAZER KRAKEN V4</p>
             <p class="price">LKR 22,000</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="RAZER KRAKEN V4" data-price="22000">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/4.webp" alt="Image 4">
+            <img src="Images/GP/4.webp" alt="Razer Barracuda X Chroma">
             <p class="product-name">Razer Barracuda X Chroma</p>
             <p class="price">LKR 18,450</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer Barracuda X Chroma" data-price="18450">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/9.jpg" alt="Image 5">
-            <p class="product-name">Razer Basilisk V3 </p>
+            <img src="Images/GP/9.jpg" alt="Razer Basilisk V3">
+            <p class="product-name">Razer Basilisk V3</p>
             <p class="price">LKR 14,000</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer Basilisk V3" data-price="14000">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/6.jpg" alt="Image 6">
+            <img src="Images/GP/6.jpg" alt="Razer Mouse Bungee V3 Chroma">
             <p class="product-name">Razer Mouse Bungee V3 Chroma</p>
             <p class="price">LKR 6,800</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer Mouse Bungee V3 Chroma" data-price="6800">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/7.jpg" alt="Image 7">
+            <img src="Images/GP/7.jpg" alt="Razer Charging Pad Chroma RGB">
             <p class="product-name">Razer Charging Pad Chroma RGB</p>
             <p class="price">LKR 7,500</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer Charging Pad Chroma RGB" data-price="7500">Add to Cart</button>
         </div>
         <div class="image-box">
-            <img src="Images/GP/8.webp" alt="Image 8">
-            <p class="product-name">Razer BlackShark V2 X Wired </p>
+            <img src="Images/GP/8.webp" alt="Razer BlackShark V2 X Wired">
+            <p class="product-name">Razer BlackShark V2 X Wired</p>
             <p class="price">LKR 10,800</p>
+            <!-- Add to Cart Button -->
+            <button class="add-to-cart" data-product="Razer BlackShark V2 X Wired" data-price="10800">Add to Cart</button>
         </div>
     </div>
     
