added cart.js and implemented functionality for cart page

--- a/Consoles.html
+++ b/Consoles.html
@@ -146,5 +146,8 @@
             <p>Copyright &copy;2025; Designed by <span class="designer">Ameen07</span></p>
         </div>
     </footer>
+
+    <script src="Scripts/cart.js"></script>
+
 </body>
 </html>
