fixing images issue on order page

--- a/order.html
+++ b/order.html
@@ -60,7 +60,7 @@
         <section class="product-grid">
             <!-- Processors (6 items) -->
             <div class="product-card">
-                <img src="/Images/order page/Intel i5.webp" alt="Intel i5 Processor">
+                <img src="Images/order page/Intel i5.webp" alt="Intel i5 Processor">
                 <h3>Intel i5</h3>
                 <p>LKR 25,000</p>
                 <button class="add-to-cart" data-product="Intel i5" data-price="25000">Add to Cart</button>
