fixing images issue

--- a/order.html
+++ b/order.html
@@ -66,31 +66,31 @@
                 <button class="add-to-cart" data-product="Intel i5" data-price="25000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/Intel i7.jpg" alt="Intel i7 Processor">
+                <img src="Images/order page/Intel i7.jpg" alt="Intel i7 Processor">
                 <h3>Intel i7</h3>
                 <p>LKR 30,000</p>
                 <button class="add-to-cart" data-product="Intel i7" data-price="30000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/AMD Ryzen 5.jpg" alt="AMD Ryzen 5">
+                <img src="Images/order page/AMD Ryzen 5.jpg" alt="AMD Ryzen 5">
                 <h3>AMD Ryzen 5</h3>
                 <p>LKR 28,000</p>
                 <button class="add-to-cart" data-product="AMD Ryzen 5" data-price="28000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/AMD Ryzen 7.jpg" alt="AMD Ryzen 7">
+                <img src="Images/order page/AMD Ryzen 7.jpg" alt="AMD Ryzen 7">
                 <h3>AMD Ryzen 7</h3>
                 <p>LKR 35,000</p>
                 <button class="add-to-cart" data-product="AMD Ryzen 7" data-price="35000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/Intel i9.jpg" alt="Intel i9 Processor">
+                <img src="Images/order page/Intel i9.jpg" alt="Intel i9 Processor">
                 <h3>Intel i9</h3>
                 <p>LKR 45,000</p>
                 <button class="add-to-cart" data-product="Intel i9" data-price="45000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/AMD_RX_6800_resized.jpg" alt="AMD Threadripper">
+                <img src="Images/order page/AMD_RX_6800_resized.jpg" alt="AMD Threadripper">
                 <h3>AMD Threadripper</h3>
                 <p>LKR 100,000</p>
                 <button class="add-to-cart" data-product="AMD Threadripper" data-price="100000">Add to Cart</button>
@@ -98,37 +98,37 @@
 
             <!-- Graphics Cards (6 items) -->
             <div class="product-card">
-                <img src="/Images/order page/NVIDIA_3060_resized.jpg" alt="NVIDIA 3060">
+                <img src="Images/order page/NVIDIA_3060_resized.jpg" alt="NVIDIA 3060">
                 <h3>NVIDIA 3060</h3>
                 <p>LKR 80,000</p>
                 <button class="add-to-cart" data-product="NVIDIA 3060" data-price="80000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/NVIDIA_3070_resized.jpg" alt="NVIDIA 3070">
+                <img src="Images/order page/NVIDIA_3070_resized.jpg" alt="NVIDIA 3070">
                 <h3>NVIDIA 3070</h3>
                 <p>LKR 120,000</p>
                 <button class="add-to-cart" data-product="NVIDIA 3070" data-price="120000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/AMD_RX_6800_resized.jpg" alt="AMD RX 6800">
+                <img src="Images/order page/AMD_RX_6800_resized.jpg" alt="AMD RX 6800">
                 <h3>AMD RX 6800</h3>
                 <p>LKR 100,000</p>
                 <button class="add-to-cart" data-product="AMD RX 6800" data-price="100000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/NVIDIA RTX 3080.jpg" alt="NVIDIA RTX 3080">
+                <img src="Images/order page/NVIDIA RTX 3080.jpg" alt="NVIDIA RTX 3080">
                 <h3>NVIDIA RTX 3080</h3>
                 <p>LKR 150,000</p>
                 <button class="add-to-cart" data-product="NVIDIA RTX 3080" data-price="150000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/AMD RX 6900 XT.jpg" alt="AMD RX 6900 XT">
+                <img src="Images/order page/AMD RX 6900 XT.jpg" alt="AMD RX 6900 XT">
                 <h3>AMD RX 6900 XT</h3>
                 <p>LKR 180,000</p>
                 <button class="add-to-cart" data-product="AMD RX 6900 XT" data-price="180000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/NVIDIA_RTX_3090_resized.jpg" alt="NVIDIA RTX 3090">
+                <img src="Images/order page/NVIDIA_RTX_3090_resized.jpg" alt="NVIDIA RTX 3090">
                 <h3>NVIDIA RTX 3090</h3>
                 <p>LKR 250,000</p>
                 <button class="add-to-cart" data-product="NVIDIA RTX 3090" data-price="250000">Add to Cart</button>
@@ -136,37 +136,37 @@
 
            <!-- RAM (6 items with different brands) -->
            <div class="product-card">
-            <img src="/Images/order page/Corsair_Vengeance_RGB_Pro_resized.jpg" alt="Corsair Vengeance RGB">
+            <img src="Images/order page/Corsair_Vengeance_RGB_Pro_resized.jpg" alt="Corsair Vengeance RGB">
             <h3>Corsair Vengeance RGB</h3>
             <p>LKR 6,500</p>
             <button class="add-to-cart" data-product="Corsair Vengeance RGB" data-price="6500">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="/Images/order page/G_SKILL_Ripjaws_V_16GB_resized.jpg" alt="G.SKILL Ripjaws V 16GB">
+            <img src="Images/order page/G_SKILL_Ripjaws_V_16GB_resized.jpg" alt="G.SKILL Ripjaws V 16GB">
             <h3>G.SKILL Ripjaws V 16GB</h3>
             <p>LKR 12,000</p>
             <button class="add-to-cart" data-product="G.SKILL Ripjaws V 16GB" data-price="12000">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="/Images/order page/Kingston_Fury_Beast_resized.jpg" alt="Kingston HyperX Fury rgb 16GB">
+            <img src="Images/order page/Kingston_Fury_Beast_resized.jpg" alt="Kingston HyperX Fury rgb 16GB">
             <h3> HyperX Fury rgb 16GB</h3>
             <p>LKR 10,500</p>
             <button class="add-to-cart" data-product="Kingston HyperX Fury rgb 16GB" data-price="10500">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="/Images/order page/Corsair_Vengeance_RGB_Pro_resized_2.jpg" alt="Corsair Vengeance LPX 32GB">
+            <img src="Images/order page/Corsair_Vengeance_RGB_Pro_resized_2.jpg" alt="Corsair Vengeance LPX 32GB">
             <h3>Corsair Vengeance 32GB</h3>
             <p>LKR 18,000</p>
             <button class="add-to-cart" data-product="Corsair Vengeance LPX 32GB" data-price="18000">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="/Images/order page/Ballistix_resized.jpg" alt="Crucial Ballistix 32GB">
+            <img src="Images/order page/Ballistix_resized.jpg" alt="Crucial Ballistix 32GB">
             <h3>Crucial Ballistix 32GB</h3>
             <p>LKR 20,000</p>
             <button class="add-to-cart" data-product="Crucial Ballistix 32GB" data-price="20000">Add to Cart</button>
         </div>
         <div class="product-card">
-            <img src="/Images/order page/HyperX Predator DDR4 64GB.webp" alt="HyperX DDR4 64GB">
+            <img src="Images/order page/HyperX Predator DDR4 64GB.webp" alt="HyperX DDR4 64GB">
             <h3>HyperX DDR4 64GB</h3>
             <p>LKR 45,000</p>
             <button class="add-to-cart" data-product="HyperX Predator DDR4 64GB" data-price="45000">Add to Cart</button>
@@ -175,37 +175,37 @@
 
             <!-- Storage (6 items) -->
             <div class="product-card">
-                <img src="/Images/order page/500GB_SSD_resized.png" alt="500GB SSD">
+                <img src="Images/order page/500GB_SSD_resized.png" alt="500GB SSD">
                 <h3>500GB SSD</h3>
                 <p>LKR 10,000</p>
                 <button class="add-to-cart" data-product="500GB SSD" data-price="10000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/1TB_SSD_resized.jpg" alt="1TB SSD">
+                <img src="Images/order page/1TB_SSD_resized.jpg" alt="1TB SSD">
                 <h3>1TB SSD</h3>
                 <p>LKR 18,000</p>
                 <button class="add-to-cart" data-product="1TB SSD" data-price="18000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/2TB_SSD_resized.png" alt="2TB SSD">
+                <img src="Images/order page/2TB_SSD_resized.png" alt="2TB SSD">
                 <h3>2TB SSD</h3>
                 <p>LKR 30,000</p>
                 <button class="add-to-cart" data-product="2TB SSD" data-price="30000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/500GB HDD.jpg" alt="500GB HDD">
+                <img src="Images/order page/500GB HDD.jpg" alt="500GB HDD">
                 <h3>500GB HDD</h3>
                 <p>LKR 5,000</p>
                 <button class="add-to-cart" data-product="500GB HDD" data-price="5000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/1TB HDD.jpg" alt="1TB HDD">
+                <img src="Images/order page/1TB HDD.jpg" alt="1TB HDD">
                 <h3>1TB HDD</h3>
                 <p>LKR 8,000</p>
                 <button class="add-to-cart" data-product="1TB HDD" data-price="8000">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/Images/order page/2TB_HDD_resized.jpg" alt="2TB HDD">
+                <img src="Images/order page/2TB_HDD_resized.jpg" alt="2TB HDD">
                 <h3>2TB HDD</h3>
                 <p>LKR 12,000</p>
                 <button class="add-to-cart" data-product="2TB HDD" data-price="12000">Add to Cart</button>
