changes to checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -55,7 +55,7 @@
             </a>
         </div>
     </div>
-
+    <p class="spacing"></p>   
     <main>
         <h1>Checkout</h1>
         <form id="checkout-form">
