--- a/cart.html
+++ b/cart.html
@@ -73,10 +73,16 @@
     </table>
 
     <h3>Total: LKR <span id="total-price">0</span></h3>
+
+    <!-- Add to Favourites and Apply Favourites buttons placed above the Checkout button -->
+    <button id="add-to-favourites">Save Cart to Favourites</button>
+    <button id="apply-favourites">Apply Favourites</button>
+
     <a href="checkout.html">
         <button>Proceed to Checkout</button>
     </a>
 </main>
+
 
 
 
